Fix alignmen

--- a/less/main.less
+++ b/less/main.less
@@ -661,3 +661,7 @@ google-map#transect-viewport {
 .aweb-link-species {
     display: inline-block;
 }
+
+#title paper-icon-button {
+    font-size: initial;
+}
